--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.2",
-    "nodemon": "^3.1.9"
+    "mongoose": "^8.9.2"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
 }
